# vlm-kg-physical-reasoning

./: .gitignore  README.md  pyproject.toml
configs/: alternative_conceptnet.yaml  default.yaml
embeds/: embeds.json
scripts/: compare_predictions.py  demo_conceptnet_module.py  prepare_gqa_subset.py  prepare_okvqa_subset.py
src/vlm_kg_physical_reasoning/: __init__.py  cli.py  config.py
src/vlm_kg_physical_reasoning/data/: dataset.py  gqa_adapter.py  okvqa_adapter.py  sample.py
src/vlm_kg_physical_reasoning/data/okvqa/: index.json
src/vlm_kg_physical_reasoning/data/samples/: sample.json
src/vlm_kg_physical_reasoning/eval/: comparison.py  metrics.py
src/vlm_kg_physical_reasoning/extraction/: entity_extraction.py
src/vlm_kg_physical_reasoning/models/: qwen_vl.py  vlm_spine.py
src/vlm_kg_physical_reasoning/pipelines/: __init__.py  baseline.py  kg_naive.py  results.py
src/vlm_kg_physical_reasoning/retrieval/: basic_retriever.py  conceptnet_client.py  conceptnet_module.py  gradio_conceptnet_client.py  node_mapper.py  question_aware_retriever.py  question_classifier.py  retriever_protocol.py
src/vlm_kg_physical_reasoning/tracing/: trace_builder.py  trace_schema.py
src/vlm_kg_physical_reasoning/utils/: io.py  logging.py
tests/: test_baseline_pipeline.py  test_conceptnet_client.py  test_conceptnet_module.py  test_config.py  test_entity_extraction.py  test_eval_comparison.py  test_eval_metrics.py  test_gqa_adapter.py  test_gradio_conceptnet_client.py  test_kg_naive_pipeline.py  test_node_mapper.py  test_question_aware_retriever.py
